<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="ok">OK</string>
    <string name="low_storage_error">Ocr dependencies cannot be downloaded due to low device storage</string>
    <string name="action_clear">Clear medals</string>
    <string name="action_goto_game">Go to game</string>
    <string name="action_load_image">Load from images</string>
    <string name="action_upload">Upload medals</string>
    <string name="action_preferences">User details</string>
    <string name="button_close">Close</string>
    <string name="button_ok">Ok</string>
    <string name="button_overlay"></string>
    <string name="button_cancel">Cancel</string>
    <string name="button_bar">button bar</string>
    <string name="button_paste">Paste from clipboard</string>
    <string name="error_not_logged_in">Not logged in</string>
    <string name="error_api_key_is_invalid">API key is not valid</string>
    <string name="error_api_key_missing">An API key must be provided.</string>
    <string name="error_trainer_missing">A valid trainer must be specified.</string>
    <string name="field_api_key">api_key</string>
    <string name="field_username">username</string>
    <string name="field_password">password</string>
    <string name="field_trainer">trainer</string>
    <string name="field_previous_trainers">previous_trainers</string>
    <string name="field_trainer_has_changed">trainer_has_changed</string>
    <string name="label_api_key">Api Key :</string>
    <string name="label_user_name">User Name :</string>
    <string name="label_password">Password :</string>
    <string name="label_trainer">Trainer :</string>
    <string name="shared_prefs_current">current</string>
    <string name="shared_prefs_previous">previous_%1$s</string>
    <string name="shared_prefs_user">user</string>
    <string name="title_activity_main">WoPoGo Medals</string>
    <string name="title_user_details">User details</string>
    <string name="toast_failed_to_find">Failed to find any medals</string>
    <string name="toast_updated_medal">\"%1$s\" set to %2$d</string>
    <string name="ocr_error">"Error reading text: %1$s"</string>
    <string name="user_cancelled">User cancelled.</string>
    <string name="screen_cap">Screen cap</string>
    <string name="timestamp_format">"yyyy-MM-dd HH:mm:ss"</string>
    <string name="website_url">https://test.wopogo.uk/app/api/v1/stat/stats.php</string>
</resources>
