<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_gravity="center_vertical|center"
        android:layout_weight="0"
        android:background="@color/orange"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/title_user_details"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_gravity="top"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="4"
            android:layout_gravity="top"
            android:padding="8dp"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/label_api_key" />

            <EditText
                android:id="@+id/editApiKey"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minLines="3"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="textMultiLine"
                android:selectAllOnFocus="true"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:weightSum="4"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"
                />
            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:id="@+id/paste_button"
                android:layout_gravity="right"
                android:text="@string/button_paste"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:weightSum="4"
            android:padding="8dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="16sp"
                android:text="@string/label_trainer" />


            <AutoCompleteTextView
                android:id="@+id/editTrainer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:ems="10"
                android:inputType="text"
                android:text="" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="top"
            android:orientation="horizontal"
            android:padding="12dp"
            android:weightSum="4">

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/cancel_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:gravity="center"
                android:textSize="16dp"
                android:text="@string/button_cancel" />

            <Button
                android:id="@+id/ok_button"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:textSize="16dp"
                android:text="@string/button_ok" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>